--- a/src/components/mapShowcaser/loader/LoadingPane.styl
+++ b/src/components/mapShowcaser/loader/LoadingPane.styl
@@ -1,16 +1,17 @@
 .loadingPane-active {
-  bottom: 0px;
   opacity: 1;
+  pointer-events: auto;
 }
 .loadingPane-inactive {
-  bottom: 100%;
   opacity: 0;
+  pointer-events: none;
 }
 .loadingPane {
   position: absolute;
-  pointer-events: auto;
+  bottom: 0px;
   user-select: none;
   height: 100%;
+  h = @height;
   width: 100%;
   left: 0px;
   background-image: linear-gradient(135deg, #34abfa, #585CF4);
@@ -32,7 +33,7 @@
     height: 30%;
     width: 3px;
     background-color: white;
-    animation: upDown 1s infinite linear;
+    animation: upDown .8s infinite linear;
   }
   .loadingBar-backdrop {
     position: relative
@@ -42,26 +43,26 @@
   }
 }
 
-@-webkit-keyframes upDown {
-  0% {
-    -webkit-transform: translate3d(0px, 0px, 0px);
+  @-webkit-keyframes upDown {
+    0% {
+      -webkit-transform: translate3d(0px, 0px, 0px);
+    }
+    50% {
+      -webkit-transform: translate3d(0px, 70vh, 0px);
+    }
+    100% {
+      -webkit-transform: translate3d(0px, 0px, 0px);
+    }
   }
-  50% {
-    -webkit-transform: translate3d(0px, 70vh, 0px);
-  }
-  100% {
-    -webkit-transform: translate3d(0px, 0px, 0px);
-  }
-}
 
-@keyframes upDown {
-  0% {
-    transform: translate3d(0px, 0px, 0px);
+  @keyframes upDown {
+    0% {
+      transform: translate3d(0px, 0px, 0px);
+    }
+    50% {
+      transform: translate3d(0px, 70vh, 0px);
+    }
+    100% {
+      transform: translate3d(0px, 0px, 0px);
+    }
   }
-  50% {
-    transform: translate3d(0px, 70vh, 0px);
-  }
-  100% {
-    transform: translate3d(0px, 0px, 0px);
-  }
-}
