added in headers to the map selectors to make UX more clear

--- a/src/components/mapShowcaser/mapSelector/MapOption.styl
+++ b/src/components/mapShowcaser/mapSelector/MapOption.styl
@@ -20,7 +20,7 @@
 
 .mapOption-containerSize-large, .mapOption-containerSize-medium {
   width: 50%;
-  height: 33.33%;
+  height: 33.33%
 }
 .mapOption-containerSize-small, .mapOption-containerSize-extraSmall {
   width: 100%;
