--- a/src/components/mapShowcaser/mapSelector/MapOption.styl
+++ b/src/components/mapShowcaser/mapSelector/MapOption.styl
@@ -4,7 +4,7 @@
     opacity: 0;
   }
 }
-.mapOption-chosen {
+.mapOption-chosen, .mapOption-chosenByThisComponent {
   .mapOption-info {
     opacity: 1;
     .mapOption-underline {
@@ -12,6 +12,12 @@
     }
   }
 }
+.mapOption-chosen {
+  .mapOption-chosenIcon {
+    opacity: 0.7
+  }
+}
+
 .mapOption-notChosen {
   .mapOption-info {
     opacity: 0;
