--- a/src/components/showcaseControls/MapSplitter.styl
+++ b/src/components/showcaseControls/MapSplitter.styl
@@ -18,6 +18,12 @@
     .mapSplitter-dividerPreview {
       height: 1.5px;
     }
+    .mapSplitter-tooltip {
+      left: 50px;
+    }
+    .mapSplitter-tooltip-false {
+      animation-name: fadeOutRight;
+    }
   }
   @media (min-width: 725.00001px) {
     flex-direction: column;
@@ -28,12 +34,87 @@
     .mapSplitter-dividerPreview {
       width: 1.5px;
     }
+    .mapSplitter-tooltip {
+      top: 50px;
+    }
+    .mapSplitter-tooltip-false {
+      animation-name: fadeOutRight;
+    }
   }
   .mapSplitter {
     display: flex;
     align-items: center;
     flex-wrap: nowrap;
     z-index: 100;
+    position: relative;
+    .mapSplitter-tooltip-false {
+      animation-delay: 3s;
+      animation-duration: 4.5s;
+      animation-delay: 1s;
+      animation-iteration-count: 1;
+      animation-timing-function: linear;
+      animation-fill-mode: forwards;
+      opacity: 0;
+      margin-left: 10px;
+    }
+    @keyframes fadeOutRight {
+      0% {
+        opacity: 0;
+        margin-left: 20px;
+      }
+      4% {
+        opacity: 1;
+        margin-left: 0px;
+      }
+      96% {
+        opacity: 1;
+        margin-left: 0px;
+      }
+      100% {
+        opacity: 0;
+        margin-left: 20px;
+      }
+    }
+    @keyframes fadeOutBottom {
+      0% {
+        opacity: 0;
+        margin-top: 20px;
+      }
+      3% {
+        opacity: 1;
+        margin-top: 0px;
+      }
+      97% {
+        opacity: 1;
+        margin-top: 0px;
+      }
+      100% {
+        opacity: 0;
+        margin-top: 20px;
+      }
+    }
+    .mapSplitter-tooltip {
+      position: absolute;
+      width: max-content;
+      height: 30px;
+      background-color: #3E95F8;
+      padding: 2.5px;
+      padding-left: 4px;
+      padding-right: 4px;
+      border-radius: 5px;
+      z-index: 1000;
+      box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.35);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      .mapSplitter-tooltip-text{
+        color: white;
+        font-family: 'Noto Sans';
+        font-weight: 400;
+        font-size: 11pt
+      }
+    }
     .mapSplitter-button {
       margin: 10px;
     }
