--- a/src/components/mapShowcaser/mapSelector/MapSelector.styl
+++ b/src/components/mapShowcaser/mapSelector/MapSelector.styl
@@ -10,6 +10,11 @@ transitionSpeed = .15s;
     justify-content: flex-start;
     align-items: flex-end;
     transition: opacity 0.2s linear;
+    .mapSelector-button-icon {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+    }
   }
   .mapSelector-collapsableContent-container {
     opacity: 1;
