--- a/src/components/mimioCredits/MimioCredits.styl
+++ b/src/components/mimioCredits/MimioCredits.styl
@@ -15,6 +15,8 @@
   pointer-events: auto;
   z-index: 5;
   color: tomato;
+  padding-left: 4px;
+  padding-right: 4px;
   .mimioCredits-text {
     font-family: 'Noto Sans';
     font-weight: 700;
