--- a/src/components/showcaseControls/MapSplitter.styl
+++ b/src/components/showcaseControls/MapSplitter.styl
@@ -112,7 +112,8 @@
         color: white;
         font-family: 'Noto Sans';
         font-weight: 400;
-        font-size: 11pt
+        font-size: 11pt;
+        white-space:nowrap;
       }
     }
     .mapSplitter-button {
