--- a/src/components/showcaseControls/MapSplitter.styl
+++ b/src/components/showcaseControls/MapSplitter.styl
@@ -50,7 +50,7 @@
     .mapSplitter-tooltip-true {
       animation-delay: 3s;
       animation-duration: 4.5s;
-      animation-delay: 1s;
+      animation-delay: .5s;
       animation-iteration-count: 1;
       animation-timing-function: linear;
       animation-fill-mode: forwards;
