removed lock file

--- a/src/AppInterface.styl
+++ b/src/AppInterface.styl
@@ -2,6 +2,16 @@
   width: 100%;
   height: 100%;
   transition: background-color 1s linear;
+  .repeatingText {
+    postion: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0px;
+    left: 0px;
+    background-image: url("https://assets3.thrillist.com/v1/image/1597304/size/tmg-slideshow_l.jpg");
+    background-repeat: repeat-y;
+    background-size: 100%;
+  }
 }
 .appInterface-colorIndex-1 {
   background-color: #F9BDD6;
