--- a/src/AppInterface.styl
+++ b/src/AppInterface.styl
@@ -2,8 +2,25 @@
   width: 100%;
   height: 100%;
   transition: background-color 1s linear;
+  .gif-container {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0px;
+    left: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background:none;
+    z-index: 0;
+    img {
+      max-width: 50%;
+      max-height: 50%;
+      
+    }
+  }
   .repeatingText {
-    postion: absolute;
+    position: absolute;
     height: 100%;
     width: 100%;
     top: 0px;
@@ -11,12 +28,13 @@
     background-image: url("http://i.imgur.com/vxtrm7S.png");
     background-repeat: repeat-y;
     background-size: 90%;
-    background-position: center -200px;
-    animation: movebg 20s linear infinite;
+    background-position: center -1500px;
+    animation: movebg 120s linear infinite;
+    z-index: 10;
   }
   @keyframes movebg {
     0% {
-      background-position: center -200px;
+      background-position: center -1500px;
     }
     100% {
       background-position: center 0px;
