--- a/src/AppInterface.styl
+++ b/src/AppInterface.styl
@@ -25,7 +25,7 @@
     width: 100%;
     top: 0px;
     left: 0px;
-    background-image: url("http://i.imgur.com/vxtrm7S.png");
+    background-image: url("https://i.imgur.com/vxtrm7S.png");
     background-repeat: repeat-y;
     background-size: 90%;
     background-position: center -1500px;
