--- a/src/index.styl
+++ b/src/index.styl
@@ -16,12 +16,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   background: #F9BDD6;
   transition: opacity 2s linear;
   opacity: 1;
   #appInterface-loader-spinner {
     width: 50px;
     animation: spin 2s infinite linear;
+    letter-spacing: 3px;
+  }
+  #appInterface-loader-text {
+    margin-top: 50px;
+    color: white;
   }
   @keyframes spin {
     0% {
